--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dino-library"]
 	path = dino-library
 	url = https://github.com/sjjeong/dino-library.git
+[submodule "dino-kakao-library"]
+	path = dino-kakao-library
+	url = https://github.com/sjjeong/dino-kakao-library.git
